<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/yp_blue"
    android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="22sp"
            android:textColor="@color/black"
            />


    <Button
        android:id="@+id/buttonSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:text="@string/search"
        android:textColor="@color/black"

        app:cornerRadius="16dp"
        app:icon="@drawable/vector2"
        app:iconGravity="textStart"
        app:iconPadding="8dp"
        app:iconTint="@color/black" />
    <Button
        android:id="@+id/buttonMedia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/media"
        android:layout_weight="1"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"

        app:cornerRadius="16dp"
        app:icon="@drawable/melody"
        app:iconGravity="textStart"
        app:iconPadding="8dp"
        app:iconTint="@color/black"
        />
    <Button
        android:id="@+id/buttonSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:layout_weight="1"
        android:layout_marginVertical="8dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"

        app:cornerRadius="16dp"
        app:icon="@drawable/vector3"
        app:iconGravity="textStart"
        app:iconPadding="8dp"
        app:iconTint="@color/black"
        />



</LinearLayout>