<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:padding="16dp"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:gravity="center_vertical">
        <ImageView
            android:id="@+id/buttonBack"
            android:layout_width="@dimen/icon_sides"
            android:layout_height="@dimen/icon_sides"
            android:src="@drawable/ic_arrow_back_16"
            android:scaleType="center"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textColor="@color/black"
            android:textSize="@dimen/title_size"
            android:layout_marginStart="24dp"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_height"
        android:layout_marginTop="24dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dark_theme"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size"/>
        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="UseSwitchCompatOrMaterialXml"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_height"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/share_app"
            android:textColor="@color/black"
            android:layout_weight="1"
            android:textSize="@dimen/text_size"/>
        <ImageView
            android:layout_width="@dimen/icon_sides"
            android:layout_height="@dimen/icon_sides"
            android:src="@drawable/ic_share_18"
            android:scaleType="center"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_height"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/support"
            android:textColor="@color/black"
            android:layout_weight="1"
            android:textSize="@dimen/text_size"/>
        <ImageView
            android:layout_width="@dimen/icon_sides"
            android:layout_height="@dimen/icon_sides"
            android:src="@drawable/ic_support_20"
            android:scaleType="center"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_height"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/user_agreement"
            android:textColor="@color/black"
            android:layout_weight="1"
            android:textSize="@dimen/text_size"/>
        <ImageView
            android:layout_width="@dimen/icon_sides"
            android:layout_height="@dimen/icon_sides"
            android:src="@drawable/ic_arrow_forward_14"
            android:scaleType="center"
            />

    </LinearLayout>

</LinearLayout>